<resources>
    <string name="app_name">T00ls</string>
    <string name="version_code">4</string>
    <string name="version_name">1.16</string>
    <string name="title_activity_main">T00ls</string>

    <string name="action_settings">Settings</string>
    <string name="others">其它</string>
    <string name="about_t00ls">关于T00ls</string>
    <string name="settings">设置</string>
    <string name="homepage">首页</string>
    <string name="news">资讯</string>
    <string name="article">文章</string>
    <string name="tools">工具</string>
    <string name="about_me">关于我</string>
    <string name="code_learning">代码学习</string>
    <string name="web_security">web安全</string>
    <string name="permeation_test">渗透测试</string>
    <string name="ctf_communication">CTF交流</string>
    <string name="likes">%1$d喜欢</string>
    <string name="comments">%1$d回复</string>
    <string name="wireless_security">手机无线</string>
    <string name="social_engineer">社会工程</string>
    <string name="reverse_engineer">逆向工程</string>
    <string name="security_news">安全资讯</string>
    <string name="hack_man">黑客人物</string>
    <string name="vul_alert">漏洞预警</string>
    <string name="Love_articles">爱我T00ls</string>

    <string name="law_house">法律讲堂</string>
    <string name="hr_notice">招聘通告</string>
    <string name="official_notice">官方通告</string>
    <string name="login_first">请先登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="answer">回答</string>
    <string name="all_articles">全部文章</string>


</resources>
