<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/homepage"/>

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/news"/>

    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/article"/>

    <item
        android:id="@+id/navigation_tools"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/tools"/>

    <item
        android:id="@+id/navigation_about_me"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/about_me"/>



</menu>
